# Orchids-SWE-Internship

backend/: .env  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
